# obs-rag

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  embed.sh  ingest.py  main.py  pyproject.toml  requirements.txt  seed_pinecone.py  server.py  tests.py
calculator/: README.md  main.py
functions/: __init__.py  get_file_content.py  get_files_info.py  obsidian_searcher.py  pinecone_searcher.py  run_python_file.py  write_file.py
ui/ui/: ui.py
