[project]
name = "obs-rag"
version = "0.1.0"
description = "An AI-powered Second Brain using RAG and Obsidian"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.15",
    "langchain-community>=0.3.15",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.0",  # 👈 CRITICAL UPDATE (Fixes the crash)
    "google-genai>=1.59.0",           # 👈 The new official SDK
    "python-dotenv>=1.0.0",
]